--- a/test/testgm.html
+++ b/test/testgm.html
@@ -1,13 +1,167 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="testgmwss.bundle.js"></script>
-</head>
-<body>
-    
-</body>
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>GM Test Page Built With Bootstrap</title>
+
+    <!-- Bootstrap -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
+    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!--[if lt IE 9]>
+      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+    <![endif]-->
+
+  </head>
+  <body>
+        <div style="height:80px"></div>
+        <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-2">
+                    </div>
+                    <div class="col-md-8" style="background: rgba(212,212,212,0.3)">
+                        <div style="height:50px"></div>
+                        <h1 class="text-center">
+                            GM Test
+                        </h1>
+                        <br>
+                        <div>
+                            <div>
+                                <span class="badge badge-primary">获取SM3哈希值</span>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>原数据:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <input id="sm3-plaindata" style="width:100%"/>
+                                </div>
+                                <div class="col-md-2">
+                                    <button type="button" class="btn btn-primary" id="get-sm3-hash-val-test" >
+                                            测试
+                                    </button>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>SM3哈希值:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <textarea id="sm3-hash-val" style="width:100%"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <span class="badge badge-primary">获取国密证书信息</span>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>用户标识:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <input id="userid-get-gm-cert" style="width:100%"/>
+                                </div>
+                                <div class="col-md-2">
+                                    <button type="button" class="btn btn-primary" id="get-gm-cert-test">
+                                            测试
+                                    </button>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>国密证书PEM信息:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <textarea id="gm-cert-pem" style="width:100%"></textarea>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>国密证书可读信息:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <table class="table table-bordered" style="table-layout: fixed" id="gm-cert-info">
+                                        <thead>
+                                            <tr>
+                                                <th>证书属性</th>
+                                                <th>属性值</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            
+                        </div>
+                        <div>
+                            <div>
+                                <span class="badge badge-primary">获取国密算法签名信息</span>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>用户标识:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <input id="userid-get-gm-signature" style="width:100%"/>
+                                </div>
+                                <div class="col-md-2">
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                    <div class="col-md-1"></div>
+                                    <div class="col-md-2">
+                                        <span>原数据:</span>
+                                    </div>
+                                    <div class="col-md-7">
+                                        <input id="plaindata-get-gm-signature" style="width:100%"/>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <button type="button" class="btn btn-primary" id="get-gm-signature-test">
+                                                测试
+                                        </button>
+                                    </div>
+                                </div>
+                            <br>
+                            <div class="row">
+                                <div class="col-md-1"></div>
+                                <div class="col-md-2">
+                                    <span>国密算法签名信息:</span>
+                                </div>
+                                <div class="col-md-7">
+                                    <textarea id="gm-signature" style="width:100%"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div style="height:50px"></div>
+                    </div>
+                    <div class="col-md-2">
+                    </div>
+                </div>
+        </div>
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="testgm.bundle.js"></script>
+  </body>
 </html>
